// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Space rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Space separator 1`] = `
<div
  class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-root"
>
  <div
    class="g-space-item"
  >
    text1
  </div>
  <span
    class="g-space-item-separator"
  >
    -
  </span>
  <div
    class="g-space-item"
  >
    <span>
      text1
    </span>
  </div>
  <span
    class="g-space-item-separator"
  >
    -
  </span>
  <div
    class="g-space-item"
  >
    text3
  </div>
</div>
`;

exports[`Space should render correct with children 1`] = `
<div
  class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-root"
>
  <div
    class="g-space-item"
  >
    text1
  </div>
  <div
    class="g-space-item"
  >
    <span>
      text1
    </span>
  </div>
  <div
    class="g-space-item"
  >
    text3
  </div>
</div>
`;

exports[`Space should render width ConfigProvider 1`] = `
Array [
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-large g-space-gap-col-large css-var-root"
  >
    <div
      class="g-space-item"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="g-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-medium g-space-gap-col-medium css-var-root"
  >
    <div
      class="g-space-item"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="g-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-large g-space-gap-col-large css-var-root"
  >
    <div
      class="g-space-item"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="g-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
]
`;

exports[`Space should render width rtl 1`] = `
Array [
  <div
    class="g-space g-space-horizontal g-space-rtl g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-root"
  >
    <div
      class="g-space-item"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="g-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="g-space g-space-horizontal g-space-rtl g-space-align-center g-space-gap-row-medium g-space-gap-col-medium css-var-root"
  >
    <div
      class="g-space-item"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="g-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="g-space g-space-horizontal g-space-rtl g-space-align-center g-space-gap-row-large g-space-gap-col-large css-var-root"
  >
    <div
      class="g-space-item"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="g-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
]
`;
